kubernetes/development/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frigate-clips
  labels:
    app: frigate-clips
    platform: frigate
  annotations:
    kubernetes.io/ingress.class: haproxy

spec:
  rules:
    - host: frigate.dev.brilliantmonkey.net
      http:
        paths:
        - path: /clips/v1
          pathType: Prefix
          backend:
            service:
              name: frigate-clips
              port:
                number: 80
